--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
 <body>
 
   <section id="calendar"></section>
+  <section id="calendar1"></section>
+  <section id="calendar2"></section>
+
 
 </body>
 </html>
